2005-01-12  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/gdk_pixbuf/pixbufscale.c: (gst_pixbufscale_link),
	(pixbufscale_scale), (gst_pixbufscale_chain):
	* ext/gdk_pixbuf/pixbufscale.h:
	  Incorporate changes from Tim-Philipp Mueller <t.i.m@orange.net>
	  to ensure rowstrides are calculated the same way as 
	  ffmpegcolorspace
	  Use gst_buffer_stamp instead of copying TIMESTAMP manually, so
	  that we pick up duration and offset also.

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/avi/gstavimux.c: (gst_avimux_class_init),
	(gst_avimux_pad_unlink), (gst_avimux_release_pad):
	  Reusability fixes.

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/alsa/gstalsamixer.c: (gst_alsa_mixer_update),
	(gst_alsa_mixer_get_volume), (gst_alsa_mixer_set_volume),
	(gst_alsa_mixer_set_mute), (gst_alsa_mixer_set_record),
	(gst_alsa_mixer_set_option), (gst_alsa_mixer_get_option):
	  Update flags when requested.

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/alsa/gstalsa.c: (gst_alsa_rates_probe):
	  Fix dmix.

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/playback/gstplaybasebin.c: (gst_play_base_bin_class_init),
	(gst_play_base_bin_init), (gst_play_base_bin_dispose),
	(probe_triggered), (new_decoded_pad), (gen_source_element),
	(gst_play_base_bin_set_property), (gst_play_base_bin_get_property):
	* gst/playback/gstplaybasebin.h:
	* gst/playback/gstplaybin.c: (gst_play_bin_class_init),
	(gst_play_bin_init), (group_switch), (remove_sinks), (setup_sinks),
	(gst_play_bin_change_state):
	  Implement group-switch signal for use in apps to clear metadata
	  cache, clean up subtitle, add suburi property instead of # hack,
	  some error-out fixes.

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/vorbis/vorbisdec.c: (vorbis_dec_chain):
	  Debug.
	* sys/v4l/v4lsrc_calls.c: (gst_v4lsrc_grab_frame):
	  If we got a state change in the _get handler, don't return success.
